// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPartiel /> should add a period 1`] = `
.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c10:hover .c13 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c14 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value=""
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value=""
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11 c12"
        type="button"
      >
        Supprimer
        <svg
          class="c13"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c10 c11 c14"
    type="button"
  >
    Ajouter une période
    <svg
      class="c13"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should delete a period 1`] = `
.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c10:hover .c13 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c14 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11 c12"
        type="button"
      >
        Supprimer
        <svg
          class="c13"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c10 c11 c14"
    type="button"
  >
    Ajouter une période
    <svg
      class="c13"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should render 1`] = `
.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c11:focus,
.c11:hover,
.c11:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c10:hover .c13 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c14 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 8em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  width: 10em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
  padding-right: 1.6rem;
  text-align: right;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c9 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c12 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de contrat
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        size="8"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[0].salary"
          size="10"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11 c12"
        type="button"
      >
        Supprimer
        <svg
          class="c13"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[1].duration"
        size="8"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c8"
          name="periods[1].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c9"
        >
          €
        </span>
      </div>
      <button
        class="c10 c11 c12"
        type="button"
      >
        Supprimer
        <svg
          class="c13"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c10 c11 c14"
    type="button"
  >
    Ajouter une période
    <svg
      class="c13"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;
